# mathpie

./: .env.example  .gitignore  DESIGN.md  README.md  index.html  manifest.json  pyproject.toml  sw.js  tests.js
content/: closet.json  elevator.json  encouragement.json  equations.json  facts.json  problems.json  rewards.json  skills.json  tricks.json
server/: README.md  fly.toml  main.py  requirements.txt
tools/: gen_icons.py  gen_problems.py  serve.js
