[project]
name = "mathpie-tools"
version = "0.1.0"
description = "Build-time content generation tooling for the MathPie static web app (problem banks, encouragement copy). The app itself is static HTML/JS and needs none of this at runtime."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",   # build-time problem/encouragement generation
    "python-dotenv>=1.0", # load ANTHROPIC_API_KEY from a local .env
    "pillow>=10.0",       # generate PWA icons (icon-192/512.png) from icon.svg
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Phase 4 live-tutor proxy. DECLARED, not installed by default — keeps the venv light until the
# tutor is actually built. Install with: pip install -e ".[tutor]"
# FastAPI chosen for token streaming (tutor replies appear word-by-word = feels fast). Voice is
# handled client-side in the browser (Web Speech API), so this proxy stays text-only and tiny.
tutor = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

# Tooling lives in tools/; the static app (index.html, content/*.json, sw.js) is not a Python package.
[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
